opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_axi"
bug-reports: "https://github.com/janestreet/hardcaml_axi/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_axi.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_axi/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.14.0"}
  "base"
  "hardcaml"
  "hardcaml_circuits"
  "hardcaml_handshake"
  "ppx_deriving_hardcaml"
  "ppx_jane"
  "dune"                  {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml AXI Interface Types"
description: "
AXI Lite, Full and Stream Interfaces for Hardcaml
"
