opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_axi"
bug-reports: "https://github.com/janestreet/hardcaml_axi/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_axi.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_axi/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "core"
  "hardcaml"
  "hardcaml_circuits"
  "hardcaml_handshake"
  "hardcaml_packed_array"
  "ppx_hardcaml"
  "ppx_jane"
  "stdio"
  "dune"                  {>= "3.17.0"}
]
available: arch != "x86_32"
conflicts: [
  "oxcaml-compiler" {< "5.2.0minus39"}
]
synopsis: "Hardcaml AXI Interface Types"
description: "
AXI Lite, Full and Stream Interfaces for Hardcaml
"
